# sweepr

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile  default.nix  flake.nix  shell.nix
src/: main.cpp  menu.cpp  menu.h
src/lib/: Cell.cpp  Cell.h  GameState.cpp  GameState.h  color.cpp  color.h  specs.cpp  specs.h  term.cpp  term.h  term_manip.cpp  term_manip.h  util.cpp  util.h
src/lib/data/: Leaderboard.cpp  Leaderboard.h  LeaderboardEntry.cpp  LeaderboardEntry.h  Scoreboard.cpp  Scoreboard.h  ScoreboardEntry.cpp  ScoreboardEntry.h  data.cpp  data.h
